crates/salvo-syntax/tests/snapshots/parser_tests__snapshot_corpus_imports.snap
---
source: crates/salvo-syntax/tests/parser_tests.rs
expression: "parse_clean(&corpus(\"imports.sv\"))"
---
Module {
    docs: [],
    items: [
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "random",
                        span: 7..13,
                    },
                    Ident {
                        name: "Random",
                        span: 14..20,
                    },
                ],
                alias: None,
                span: 0..20,
            },
        ),
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "list",
                        span: 28..32,
                    },
                    Ident {
                        name: "add",
                        span: 33..36,
                    },
                ],
                alias: None,
                span: 21..36,
            },
        ),
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "list",
                        span: 44..48,
                    },
                    Ident {
                        name: "ext",
                        span: 49..52,
                    },
                    Ident {
                        name: "add",
                        span: 53..56,
                    },
                ],
                alias: Some(
                    Ident {
                        name: "ext_add",
                        span: 60..67,
                    },
                ),
                span: 37..67,
            },
        ),
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "core",
                        span: 75..79,
                    },
                    Ident {
                        name: "Str",
                        span: 80..83,
                    },
                ],
                alias: None,
                span: 68..83,
            },
        ),
        Fn(
            FnDecl {
                docs: [
                    "[intrinsic-fn] A compiler-intrinsic fn: declared for its signature and",
                    "deduction; each backend lowers calls to it directly from a table keyed by",
                    "name.",
                ],
                exported: false,
                intrinsic: true,
                platform: false,
                is_iter: false,
                iter_state: [],
                is_send: false,
                name: Ident {
                    name: "copy",
                    span: 258..262,
                },
                scoped_to: None,
                compfn: None,
                by: None,
                stamped: None,
                generics: [
                    Ident {
                        name: "T",
                        span: 263..264,
                    },
                ],
                generic_canbe: [],
                derived_return: None,
                params: [
                    Param {
                        name: Ident {
                            name: "value",
                            span: 266..271,
                        },
                        ty: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "T",
                                    span: 273..274,
                                },
                                args: [],
                                value_args: [],
                                from: [],
                                at: None,
                                binder: false,
                                established: false,
                                alias: None,
                                span: 273..274,
                            },
                        },
                        variadic: false,
                        implicit: false,
                        span: 266..274,
                    },
                ],
                implicit_groups: [],
                effects: Some(
                    [],
                ),
                deductions: Some(
                    [
                        Deduction {
                            target: Param {
                                name: Ident {
                                    name: "value",
                                    span: 287..292,
                                },
                                path: [],
                            },
                            kind: KeepAll,
                            span: 287..292,
                        },
                    ],
                ),
                return_type: Some(
                    Named {
                        qualifiers: [],
                        base: TypeRef {
                            name: Ident {
                                name: "T",
                                span: 282..283,
                            },
                            args: [],
                            value_args: [],
                            from: [],
                            at: None,
                            binder: false,
                            established: false,
                            alias: None,
                            span: 282..283,
                        },
                    },
                ),
                constructs: None,
                body: None,
                span: 255..283,
            },
        ),
        Fn(
            FnDecl {
                docs: [],
                exported: false,
                intrinsic: false,
                platform: false,
                is_iter: false,
                iter_state: [],
                is_send: false,
                name: Ident {
                    name: "chars",
                    span: 297..302,
                },
                scoped_to: None,
                compfn: None,
                by: None,
                stamped: None,
                generics: [],
                generic_canbe: [],
                derived_return: None,
                params: [
                    Param {
                        name: Ident {
                            name: "str",
                            span: 303..306,
                        },
                        ty: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "Str",
                                    span: 308..311,
                                },
                                args: [],
                                value_args: [],
                                from: [],
                                at: None,
                                binder: false,
                                established: false,
                                alias: None,
                                span: 308..311,
                            },
                        },
                        variadic: false,
                        implicit: false,
                        span: 303..311,
                    },
                ],
                implicit_groups: [],
                effects: Some(
                    [],
                ),
                deductions: Some(
                    [
                        Deduction {
                            target: Param {
                                name: Ident {
                                    name: "str",
                                    span: 329..332,
                                },
                                path: [],
                            },
                            kind: KeepAll,
                            span: 329..332,
                        },
                    ],
                ),
                return_type: Some(
                    Array {
                        elem: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "Char",
                                    span: 319..323,
                                },
                                args: [],
                                value_args: [],
                                from: [],
                                at: None,
                                binder: false,
                                established: false,
                                alias: None,
                                span: 319..323,
                            },
                        },
                        span: 319..325,
                    },
                ),
                constructs: None,
                body: Some(
                    Block {
                        stmts: [
                            Expr(
                                Return {
                                    value: Some(
                                        ArrayLit {
                                            elems: [],
                                            span: 346..348,
                                        },
                                    ),
                                    span: 339..348,
                                },
                            ),
                        ],
                        span: 333..350,
                    },
                ),
                span: 294..350,
            },
        ),
        Fn(
            FnDecl {
                docs: [],
                exported: false,
                intrinsic: false,
                platform: false,
                is_iter: false,
                iter_state: [],
                is_send: false,
                name: Ident {
                    name: "complicated_func",
                    span: 355..371,
                },
                scoped_to: None,
                compfn: None,
                by: None,
                stamped: None,
                generics: [
                    Ident {
                        name: "T",
                        span: 372..373,
                    },
                ],
                generic_canbe: [],
                derived_return: None,
                params: [
                    Param {
                        name: Ident {
                            name: "list",
                            span: 375..379,
                        },
                        ty: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "List",
                                    span: 381..385,
                                },
                                args: [
                                    Named {
                                        qualifiers: [],
                                        base: TypeRef {
                                            name: Ident {
                                                name: "T",
                                                span: 386..387,
                                            },
                                            args: [],
                                            value_args: [],
                                            from: [],
                                            at: None,
                                            binder: false,
                                            established: false,
                                            alias: None,
                                            span: 386..387,
                                        },
                                    },
                                ],
                                value_args: [],
                                from: [],
                                at: None,
                                binder: false,
                                established: false,
                                alias: None,
                                span: 381..388,
                            },
                        },
                        variadic: false,
                        implicit: false,
                        span: 375..388,
                    },
                ],
                implicit_groups: [],
                effects: Some(
                    [],
                ),
                deductions: Some(
                    [
                        Deduction {
                            target: Param {
                                name: Ident {
                                    name: "list",
                                    span: 403..407,
                                },
                                path: [],
                            },
                            kind: KeepAll,
                            span: 403..407,
                        },
                    ],
                ),
                return_type: Some(
                    Named {
                        qualifiers: [],
                        base: TypeRef {
                            name: Ident {
                                name: "Str",
                                span: 396..399,
                            },
                            args: [],
                            value_args: [],
                            from: [],
                            at: None,
                            binder: false,
                            established: false,
                            alias: None,
                            span: 396..399,
                        },
                    },
                ),
                constructs: None,
                body: Some(
                    Block {
                        stmts: [
                            Expr(
                                Return {
                                    value: Some(
                                        Str {
                                            parts: [
                                                Text(
                                                    "",
                                                ),
                                            ],
                                            span: 421..423,
                                        },
                                    ),
                                    span: 414..423,
                                },
                            ),
                        ],
                        span: 408..425,
                    },
                ),
                span: 352..425,
            },
        ),
    ],
    uses: [],
}
