crates/salvo-syntax/tests/snapshots/parser_tests__snapshot_corpus_imports_externals.snap
---
source: crates/salvo-syntax/tests/parser_tests.rs
expression: "parse_clean(&corpus(\"imports_externals.sv\"))"
---
Module {
    items: [
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "random",
                        span: 7..13,
                    },
                    Ident {
                        name: "Random",
                        span: 14..20,
                    },
                ],
                alias: None,
                span: 0..20,
            },
        ),
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "list",
                        span: 28..32,
                    },
                    Ident {
                        name: "add",
                        span: 33..36,
                    },
                ],
                alias: None,
                span: 21..36,
            },
        ),
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "list",
                        span: 44..48,
                    },
                    Ident {
                        name: "ext",
                        span: 49..52,
                    },
                    Ident {
                        name: "add",
                        span: 53..56,
                    },
                ],
                alias: Some(
                    Ident {
                        name: "ext_add",
                        span: 60..67,
                    },
                ),
                span: 37..67,
            },
        ),
        Import(
            ImportDecl {
                path: [
                    Ident {
                        name: "core",
                        span: 75..79,
                    },
                    Ident {
                        name: "Str",
                        span: 80..83,
                    },
                ],
                alias: None,
                span: 68..83,
            },
        ),
        Type(
            TypeDecl {
                backing: Some(
                    External,
                ),
                name: Ident {
                    name: "LinkedList",
                    span: 99..109,
                },
                generics: [
                    Ident {
                        name: "T",
                        span: 110..111,
                    },
                ],
                auto_qualifiers: [],
                alias: None,
                span: 94..109,
            },
        ),
        Fn(
            FnDecl {
                backing: Some(
                    External,
                ),
                name: Ident {
                    name: "chars",
                    span: 126..131,
                },
                generics: [],
                generic_with: [],
                params: [
                    Param {
                        name: Ident {
                            name: "str",
                            span: 132..135,
                        },
                        ty: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "Str",
                                    span: 137..140,
                                },
                                args: [],
                                span: 137..140,
                            },
                        },
                        variadic: false,
                        span: 132..140,
                    },
                ],
                effects: None,
                deductions: None,
                return_type: Some(
                    Array {
                        elem: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "Char",
                                    span: 145..149,
                                },
                                args: [],
                                span: 145..149,
                            },
                        },
                        span: 145..151,
                    },
                ),
                constructs: None,
                body: None,
                span: 123..151,
            },
        ),
        Fn(
            FnDecl {
                backing: Some(
                    External,
                ),
                name: Ident {
                    name: "complicated_func",
                    span: 165..181,
                },
                generics: [
                    Ident {
                        name: "T",
                        span: 182..183,
                    },
                ],
                generic_with: [],
                params: [
                    Param {
                        name: Ident {
                            name: "list",
                            span: 185..189,
                        },
                        ty: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "List",
                                    span: 191..195,
                                },
                                args: [
                                    Named {
                                        qualifiers: [],
                                        base: TypeRef {
                                            name: Ident {
                                                name: "T",
                                                span: 196..197,
                                            },
                                            args: [],
                                            span: 196..197,
                                        },
                                    },
                                ],
                                span: 191..198,
                            },
                        },
                        variadic: false,
                        span: 185..198,
                    },
                ],
                effects: None,
                deductions: None,
                return_type: Some(
                    Named {
                        qualifiers: [],
                        base: TypeRef {
                            name: Ident {
                                name: "Str",
                                span: 203..206,
                            },
                            args: [],
                            span: 203..206,
                        },
                    },
                ),
                constructs: None,
                body: None,
                span: 162..206,
            },
        ),
        Fn(
            FnDecl {
                backing: Some(
                    Internal,
                ),
                name: Ident {
                    name: "copy",
                    span: 367..371,
                },
                generics: [
                    Ident {
                        name: "T",
                        span: 372..373,
                    },
                ],
                generic_with: [],
                params: [
                    Param {
                        name: Ident {
                            name: "value",
                            span: 375..380,
                        },
                        ty: Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "T",
                                    span: 382..383,
                                },
                                args: [],
                                span: 382..383,
                            },
                        },
                        variadic: false,
                        span: 375..383,
                    },
                ],
                effects: None,
                deductions: Some(
                    [
                        Deduction {
                            param: Ident {
                                name: "value",
                                span: 389..394,
                            },
                            qualifiers: [],
                            explicit: false,
                            span: 389..394,
                        },
                    ],
                ),
                return_type: Some(
                    Named {
                        qualifiers: [],
                        base: TypeRef {
                            name: Ident {
                                name: "T",
                                span: 396..397,
                            },
                            args: [],
                            span: 396..397,
                        },
                    },
                ),
                constructs: None,
                body: None,
                span: 364..397,
            },
        ),
    ],
}
